@startuml YAWL Type Safety Patterns (Key Fixes)
!theme plain

package "Context Managers (Critical Pattern)" {
  class WorkletRepository {
    + __enter__() : Self
    + __exit__(...) : Literal[False]
    --
    **FIX:** Changed from bool to Literal[False]
    Prevents exception swallowing
  }

  class WorkletExecutor {
    + __enter__() : Self
    + __exit__(...) : Literal[False]
    --
    **FIX:** Changed from bool to Literal[False]
    Mypy strict mode compliance
  }

  note right of WorkletRepository
    **80/20 Impact:**
    - These 2 classes used in 80% of workflows
    - Type safety prevents runtime errors
    - Literal[False] = never suppress exceptions
  end note
}

package "Import Resolution (High Impact)" {
  class YTask {
    Base task class
  }

  class YAtomicTask {
    Leaf task execution
  }

  class YCompositeTask {
    Nested workflow
  }

  YTask <|-- YAtomicTask
  YTask <|-- YCompositeTask

  note bottom of YCompositeTask
    **FIXED IMPORTS:**
    - Was: from y_task import YCompositeTask ❌
    - Now: from y_atomic_task import YCompositeTask ✅

    Impact: 20% of files, 80% of workflow operations
  end note
}

package "XNode Design (Foundational)" {
  class XNode {
    - name : str
    - children : list[XNode]
    - attributes : dict[str, str]
    + __eq__(other) : bool
    + __hash__ = None
    --
    **FIX:** Explicit __hash__ = None
    Prevents set/dict usage bugs
  }

  note right of XNode
    **80/20 Rationale:**
    - Used in 80% of XML operations
    - Mutable + hashable = data corruption
    - __hash__ = None makes intent explicit
  end note
}

package "Session Types (Authentication Core)" {
  abstract class YSession {
    + get_client() : YClient | None
  }

  class YServiceSession {
    + get_client() : YClient | None
    --
    **FIX:** Return type covariance
    Was: YAWLServiceReference
    Now: YClient | None (with cast)
  }

  YSession <|-- YServiceSession

  note bottom of YServiceSession
    **Pattern:**
    - Parent defines contract: YClient | None
    - Child must conform (Liskov Substitution)
    - Use cast() for implementation detail
  end note
}

@enduml
